# learn-wasm-bindgen

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
examples/add/: Cargo.toml  README.md  index.js  pnpm-lock.yaml
examples/console_log/: Cargo.toml  README.md  index.js  package.json  webpack.config.js
examples/console_log/src/: lib.rs
examples/hello_world/: Cargo.toml  package-lock.json
examples/without_a_bundler/: Cargo.toml  README.md
src/: lib.rs
